create library html elements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
   <script src="index.js" defer></script>
 </head>
 <body>
+
+  <template id="bookTemplate">
+    <div class="book">
+      <h3 class="title"></h3>
+      <p class="author"></p>
+      <p class="pages"></p>
+
+      <button>Read</button>
+    </div>
+  </template>
+
+  <header>
+    <div class="title">
+      <h1>My Library</h1>
+      <h2>Explore and Learn</h2>
+    </div>
+
+    <button>Add a New Book</button>
+  </header>
+  
+  <div class="books"></div>
   
 </body>
 </html>
