add open/close functionality for modal form

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <h2>Explore and Learn</h2>
       </div>
 
-      <button>Add New Book</button>
+      <button class="btn btn--solid js-add-book">Add New Book</button>
     </div>
   </header>
 
-  <div class="modal hide">
-    <div class="modal__bg"></div>
+  <div class="modal js-modal hide">
+    <div class="modal__bg js-modal-bg"></div>
 
     <form class="form">
-      <div class="form__close">X</div>
+      <div class="form__close js-close-icon">X</div>
       <h3 class="form__title">Add a New Book</h3>
       <div class="form__field-group">
         <label for="" class="form__label">Title:</label>
